# the-culinary-team-shopify

./: main.py  pyproject.toml  requirements.txt
.github/workflows/: cloud-functions.yaml
db/: bigquery.py
shopify/: shopify_repo.py  shopify_service.py  test_shopify_service.py
shopify/pipeline/: __init__.py  draft_orders.py  interface.py  orders.py
shopify/shop/: __init__.py  interface.py
tasks/: cloud_tasks.py
